Support eclipselink 5.x